Toggle button visibility firefox fixed #1378

--- a/src/components/special/_toggle.less
+++ b/src/components/special/_toggle.less
@@ -1,6 +1,6 @@
 input[type="radio"].toggle-btn,
 input[type="checkbox"].toggle-btn {
-  padding: 10px !important;
+  padding: 0px !important;
 }
 
 .toggle-btn {
